--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -4988,12 +4988,25 @@ Two times at WWDC!</string>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BbM-nF-pSR">
                                 <rect key="frame" x="-61" y="-14" width="123" height="29"/>
                                 <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="356" id="rkk-7r-DJB"/>
+                                </constraints>
                                 <segments>
                                     <segment title="Standard"/>
                                     <segment title="Hybrid"/>
                                     <segment title="Satellite"/>
                                 </segments>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="rkk-7r-DJB"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="rkk-7r-DJB"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <action selector="changeMapTypeTaped:" destination="oJ6-o5-4XE" eventType="valueChanged" id="Bnn-2O-bfY"/>
                                 </connections>
@@ -5016,20 +5029,26 @@ Two times at WWDC!</string>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="FPq-Yt-PGH"/>
                             <constraint firstItem="Ayj-cf-GR6" firstAttribute="centerY" secondItem="0wG-oj-9i7" secondAttribute="centerY" constant="61.5" id="FVN-HS-iRC"/>
                             <constraint firstItem="0wG-oj-9i7" firstAttribute="leading" secondItem="jd6-Qe-8fv" secondAttribute="leading" id="INF-wv-CU7"/>
+                            <constraint firstItem="LP0-YZ-pcz" firstAttribute="top" secondItem="BbM-nF-pSR" secondAttribute="bottom" constant="-48" id="J0t-Qv-WOH"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="centerY" secondItem="0wG-oj-9i7" secondAttribute="centerY" constant="11.75" id="JGi-1x-tpP"/>
                             <constraint firstItem="0wG-oj-9i7" firstAttribute="centerY" secondItem="jd6-Qe-8fv" secondAttribute="centerY" constant="-54" id="K3h-OE-6L2"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="LP0-YZ-pcz" secondAttribute="leading" id="KM6-At-NsQ"/>
                             <constraint firstItem="BbM-nF-pSR" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" constant="22" id="L2b-Nb-kBV"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="bottom" secondItem="IJ0-4j-GkO" secondAttribute="top" id="MTK-bx-Qxd"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Ayj-cf-GR6" secondAttribute="bottom" constant="-8" id="PjX-TD-DKr"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="centerX" secondItem="0wG-oj-9i7" secondAttribute="centerX" id="Qcw-fP-Eed"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="top" secondItem="LP0-YZ-pcz" secondAttribute="bottom" constant="8" symbolic="YES" id="Qnv-Xc-ETG"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="67" id="SZm-ek-t3T"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leadingMargin" constant="6" id="TIS-nN-CgO"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leading" id="V7P-fl-Ud1"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="67" id="V8c-FV-FMe"/>
                             <constraint firstAttribute="centerX" secondItem="LP0-YZ-pcz" secondAttribute="centerX" id="W6a-Da-2d6"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="WaD-0L-1zA"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="21" id="ZX1-wa-kys"/>
-                            <constraint firstItem="BbM-nF-pSR" firstAttribute="centerX" secondItem="LP0-YZ-pcz" secondAttribute="centerX" id="a0L-Ed-hak"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leadingMargin" constant="36" id="aI0-vh-qb7"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" constant="1" id="aRY-ve-1Kw">
+                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                            </constraint>
                             <constraint firstAttribute="trailing" secondItem="MlJ-U5-HGS" secondAttribute="trailing" id="amS-im-Mr4"/>
                             <constraint firstAttribute="trailing" secondItem="MlJ-U5-HGS" secondAttribute="trailing" id="byb-Ih-ybX"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="eAR-jI-QQG"/>
@@ -5045,6 +5064,7 @@ Two times at WWDC!</string>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="trailing" secondItem="0wG-oj-9i7" secondAttribute="trailing" id="kbn-4U-gZZ"/>
                             <constraint firstItem="Ayj-cf-GR6" firstAttribute="leading" secondItem="jd6-Qe-8fv" secondAttribute="trailing" constant="63" id="lPr-hN-37i"/>
                             <constraint firstAttribute="bottomMargin" secondItem="HO0-Sc-Wtn" secondAttribute="bottom" constant="-6" id="miB-VU-5IA"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="trailing" secondItem="LP0-YZ-pcz" secondAttribute="trailing" id="mk8-k1-0OO"/>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="trailing" secondItem="LP0-YZ-pcz" secondAttribute="trailing" id="nBc-cz-MqJ"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="top" secondItem="0wG-oj-9i7" secondAttribute="bottom" constant="-42" id="nuP-Yu-hB0"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="MlJ-U5-HGS" secondAttribute="leading" id="qeh-N6-D9x"/>
@@ -5055,6 +5075,7 @@ Two times at WWDC!</string>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="leading" secondItem="0wG-oj-9i7" secondAttribute="leading" id="uPg-9Q-CBK"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="BbM-nF-pSR" secondAttribute="trailing" constant="-296" id="uoy-N2-uSM"/>
                             <constraint firstAttribute="bottom" secondItem="MlJ-U5-HGS" secondAttribute="bottom" id="z0t-yv-8Pq"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="LP0-YZ-pcz" secondAttribute="trailing" constant="-348" id="z9q-5a-Zgx"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" id="zRN-CT-FvA"/>
                         </constraints>
                         <variation key="default">
@@ -5066,27 +5087,38 @@ Two times at WWDC!</string>
                                 <exclude reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <exclude reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <exclude reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="AuK-bR-fIk"/>
+                                <exclude reference="byb-Ih-ybX"/>
+                                <exclude reference="kbn-4U-gZZ"/>
+                                <exclude reference="nBc-cz-MqJ"/>
+                                <exclude reference="uPg-9Q-CBK"/>
+                                <exclude reference="24i-T5-rZH"/>
+                                <exclude reference="25y-p8-sh6"/>
+                                <exclude reference="26i-zr-An1"/>
+                                <exclude reference="J0t-Qv-WOH"/>
+                                <exclude reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <exclude reference="gwD-b3-qcv"/>
+                                <exclude reference="qeh-N6-D9x"/>
+                                <exclude reference="uoy-N2-uSM"/>
+                                <exclude reference="84L-P4-1bv"/>
+                                <exclude reference="KM6-At-NsQ"/>
+                                <exclude reference="L2b-Nb-kBV"/>
+                                <exclude reference="TIS-nN-CgO"/>
+                                <exclude reference="aI0-vh-qb7"/>
+                                <exclude reference="aRY-ve-1Kw"/>
+                                <exclude reference="iHf-3C-km3"/>
+                                <exclude reference="mk8-k1-0OO"/>
+                                <exclude reference="z9q-5a-Zgx"/>
+                                <exclude reference="INF-wv-CU7"/>
+                                <exclude reference="K3h-OE-6L2"/>
+                                <exclude reference="gv2-6v-1Gk"/>
                                 <exclude reference="C3m-RR-vOq"/>
                                 <exclude reference="CeV-Vn-6ee"/>
                                 <exclude reference="JGi-1x-tpP"/>
                                 <exclude reference="Qnv-Xc-ETG"/>
                                 <exclude reference="ZX1-wa-kys"/>
                                 <exclude reference="miB-VU-5IA"/>
-                                <exclude reference="84L-P4-1bv"/>
-                                <exclude reference="L2b-Nb-kBV"/>
-                                <exclude reference="a0L-Ed-hak"/>
-                                <exclude reference="iHf-3C-km3"/>
-                                <exclude reference="INF-wv-CU7"/>
-                                <exclude reference="K3h-OE-6L2"/>
-                                <exclude reference="gv2-6v-1Gk"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <exclude reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5101,19 +5133,14 @@ Two times at WWDC!</string>
                                 <exclude reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <exclude reference="24i-T5-rZH"/>
-                                <exclude reference="25y-p8-sh6"/>
-                                <exclude reference="26i-zr-An1"/>
-                                <exclude reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <exclude reference="gwD-b3-qcv"/>
-                                <exclude reference="qeh-N6-D9x"/>
-                                <exclude reference="uoy-N2-uSM"/>
-                                <exclude reference="AuK-bR-fIk"/>
-                                <exclude reference="byb-Ih-ybX"/>
-                                <exclude reference="kbn-4U-gZZ"/>
-                                <exclude reference="nBc-cz-MqJ"/>
-                                <exclude reference="uPg-9Q-CBK"/>
+                                <exclude reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <exclude reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <exclude reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -5126,27 +5153,45 @@ Two times at WWDC!</string>
                                 <include reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <include reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <include reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="17X-1c-82O"/>
+                                <exclude reference="8Or-7s-l9c"/>
+                                <include reference="AuK-bR-fIk"/>
+                                <exclude reference="amS-im-Mr4"/>
+                                <include reference="byb-Ih-ybX"/>
+                                <exclude reference="hEr-MA-L17"/>
+                                <include reference="kbn-4U-gZZ"/>
+                                <include reference="nBc-cz-MqJ"/>
+                                <include reference="uPg-9Q-CBK"/>
+                                <exclude reference="z0t-yv-8Pq"/>
+                                <include reference="24i-T5-rZH"/>
+                                <include reference="25y-p8-sh6"/>
+                                <include reference="26i-zr-An1"/>
+                                <include reference="J0t-Qv-WOH"/>
+                                <include reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <include reference="gwD-b3-qcv"/>
+                                <include reference="qeh-N6-D9x"/>
+                                <exclude reference="rlm-4g-Kco"/>
+                                <exclude reference="uoy-N2-uSM"/>
+                                <exclude reference="zRN-CT-FvA"/>
+                                <exclude reference="84L-P4-1bv"/>
+                                <include reference="KM6-At-NsQ"/>
+                                <exclude reference="L2b-Nb-kBV"/>
+                                <exclude reference="TIS-nN-CgO"/>
+                                <exclude reference="aI0-vh-qb7"/>
+                                <exclude reference="aRY-ve-1Kw"/>
+                                <exclude reference="iHf-3C-km3"/>
+                                <include reference="mk8-k1-0OO"/>
+                                <exclude reference="z9q-5a-Zgx"/>
+                                <exclude reference="INF-wv-CU7"/>
+                                <exclude reference="K3h-OE-6L2"/>
+                                <include reference="gv2-6v-1Gk"/>
                                 <include reference="C3m-RR-vOq"/>
                                 <exclude reference="CeV-Vn-6ee"/>
                                 <exclude reference="JGi-1x-tpP"/>
                                 <include reference="Qnv-Xc-ETG"/>
                                 <include reference="ZX1-wa-kys"/>
                                 <include reference="miB-VU-5IA"/>
-                                <exclude reference="84L-P4-1bv"/>
-                                <include reference="L2b-Nb-kBV"/>
-                                <include reference="a0L-Ed-hak"/>
-                                <exclude reference="iHf-3C-km3"/>
-                                <exclude reference="INF-wv-CU7"/>
-                                <exclude reference="K3h-OE-6L2"/>
-                                <include reference="gv2-6v-1Gk"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <include reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5161,26 +5206,14 @@ Two times at WWDC!</string>
                                 <include reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <include reference="24i-T5-rZH"/>
-                                <include reference="25y-p8-sh6"/>
-                                <include reference="26i-zr-An1"/>
-                                <include reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <include reference="gwD-b3-qcv"/>
-                                <include reference="qeh-N6-D9x"/>
-                                <exclude reference="rlm-4g-Kco"/>
-                                <include reference="uoy-N2-uSM"/>
-                                <exclude reference="zRN-CT-FvA"/>
-                                <exclude reference="17X-1c-82O"/>
-                                <exclude reference="8Or-7s-l9c"/>
-                                <include reference="AuK-bR-fIk"/>
-                                <exclude reference="amS-im-Mr4"/>
-                                <include reference="byb-Ih-ybX"/>
-                                <exclude reference="hEr-MA-L17"/>
-                                <include reference="kbn-4U-gZZ"/>
-                                <include reference="nBc-cz-MqJ"/>
-                                <include reference="uPg-9Q-CBK"/>
-                                <exclude reference="z0t-yv-8Pq"/>
+                                <include reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <include reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <include reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
                             </mask>
                         </variation>
                     </view>
